package pt.hotel.animais.model.enums;

public enum MetodoPagamento {
    NAO_DEFINIDO,
    NUMERARIO,
    CARTAO_DEBITO,
    CARTAO_CREDITO
}